combine interface and implementation files
Build system is not very smooth right now, requires manually
shuffling .so and .gcm files around. Correct solution is probably
to have a "global" gcm.cache folder across multiple projects.

Also, module TuckTuck in Sandbox.cpp feels incorrect. Should
probably have a separate file implementing ApplicationFactory, which
is then exported and imported into Sandbox which can then export
a Sandbox module. We have the start of this already actually but
just haven't followed through with it.

--- a/Sandbox/Makefile
+++ b/Sandbox/Makefile
@@ -1,19 +1,26 @@
-LIB_PATH := ../TuckTuck/lib
+LIB_PATH := ./lib
 GCM_PATH := $(LIB_PATH)/gcm.cache
 # mapper process lets us specify where to build and fetch GCM libs, based on magic from this SO post
 # https://stackoverflow.com/questions/69549286/how-to-modify-gcm-cache-path-when-using-gcc-11-to-build-c20-modules
 MAPPER := '-fmodule-mapper=|@g++-mapper-server -r'$(GCM_PATH)
 FLAGS := g++-11 -std=c++20 -fmodules-ts
 
-all: Sandbox
+# I think it would be correct to just call make in make ../TuckTuck from here,
+# essentially says "TuckTuck is a dependency of this project"
+all: Sandbox.exe
 
-# test: Application.cpp 
-# 	$(FLAGS) $(MAPPER) -fPIC -c Application.cpp -o application.o 
-
-# 	$(FLAGS) $(MAPPER) main.cpp -o main -Xlinker $(LIB_PATH)/test.so 
-
-Sandbox: Sandbox.o TuckTuck.so
-	$(FLAGS) $(MAPPER) $< -o ^@ -Xlinker TuckTuck.so
+Sandbox.exe: Sandbox.o 
+	$(FLAGS) $(MAPPER) $< -o $@ -Xlinker TuckTuck.so
 
 %.o: src/%.cpp
+	# $(MAKE) fetch_so
 	$(FLAGS) $(MAPPER) -fPIC -c $< -o $@
+
+fetch_so: 
+	mkdir lib
+	mkdir lib/gcm.cache
+	cp ../TuckTuck/lib/gcm.cache/TuckTuck.gcm lib/gcm.cache/TuckTuck.gcm
+	cp ../TuckTuck/TuckTuck.so ./TuckTuck.so
+
+clean: 
+	rm -rf ./lib *.o *.so *.exe
