update cmake lists

--- a/Sandbox/CMakeLists.txt
+++ b/Sandbox/CMakeLists.txt
@@ -6,4 +6,12 @@ add_executable(Sandbox
 
 # add_dependencies(Sandbox TuckTuck)
 
+set(SANDBOX_BUILD_DEBUG TRUE)
+# target_compile_options(Sandbox PUBLIC -lGl -g -lm -lglfw -lglfw3)
+if(SANDBOX_BUILD_DEBUG)
+    add_compile_options(Sandbox PRIVATE -g -O0)
+endif()
+
 target_link_libraries(Sandbox PRIVATE TuckTuck)
+
+
